update return fav
